--- a/assignment6/style/style.css
+++ b/assignment6/style/style.css
@@ -209,11 +209,15 @@ header nav a {
 *
 *=========================================*/
 footer {
-  background: #333;
+  background: #2E8B57;
   padding: 10px 30px;
   text-align: right;
 }
 
 footer img {
-  width: 40px;
+  width: 45px;
+}
+
+.foo-footer {
+  border: solid 2px #000;
 }
